# xcc-webshop-data-stack

./: .env_example  .gitignore  .pre-commit-config.yaml  Taskfile.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ci_cleanup.yml  ci_dev.yml
book/: mkdocs.yml
book/docs/: appendix.md  chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  index.md
dbt/webshop/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/webshop/macros/get_custom_name/: get_custom_schema.sql  get_custom_table_name.sql
dbt/webshop/macros/sample_data/: sample_by_id.sql
dbt/webshop/models/staging/: _stg__schema.yml  _stg__sources.yml  stg_webshop__categories.sql  stg_webshop__customer_addresses.sql  stg_webshop__customer_payment_providers.sql  stg_webshop__customers.sql  stg_webshop__events.sql  stg_webshop__order_items.sql  stg_webshop__orders.sql  stg_webshop__payment_providers.sql  stg_webshop__product_brands.sql  stg_webshop__product_categories.sql  stg_webshop__products.sql
infra/postgres/dump/: webshop.dump
infra/postgres/init/non-prod/: init_db.sh
infra/postgres/init/prod/: init_db.sh
infra/taskfiles/: dbt.yml  docker.yml  env_checks.yml  gha_runner.yml
scripts/: check_data_status.sh  get_runner_status.sh  get_runner_token.sh  push_secrets_to_github.py
